change todo's completion

--- a/src/components/Todos/TodoContent/TodoContent.module.css
+++ b/src/components/Todos/TodoContent/TodoContent.module.css
@@ -20,8 +20,12 @@
   background: #f04a7f !important;
 }
 
-.li_item .check {
+.check {
   margin-right: 5px;
+}
+
+.li_item_act {
+  text-decoration: line-through;
 }
 
 .delete_img {
